Fixed checkstyle and PMD issues